force-app/main/default/objects/Account/fields/IFI_Intacct_Vendor_ID__c.field-meta.xml
<CustomField>
    <fullName>IFI_Intacct_Vendor_ID__c</fullName>
    <externalId>true</externalId>
    <label>Intacct Vendor ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>