force-app/main/default/objects/Account/fields/IFI_IntacctCustomerID__c.field-meta.xml
<CustomField>
    <fullName>IFI_IntacctCustomerID__c</fullName>
    <displayFormat>C{00000}</displayFormat>
    <label>Intacct Customer ID</label>
    <type>AutoNumber</type>
</CustomField>