force-app/main/default/objects/Account/fields/IFI_IntacctCustomerName__c.field-meta.xml
<CustomField>
    <fullName>IFI_IntacctCustomerName__c</fullName>
    <formula>LEFT(Name,50)</formula>
    <label>Intacct Customer Name</label>
    <type>Text</type>
</CustomField>