force-app/main/default/objects/Account/fields/IFI_IntacctPartnerID__c.field-meta.xml
<CustomField>
    <fullName>IFI_IntacctPartnerID__c</fullName>
    <displayFormat>P{000000}</displayFormat>
    <label>Intacct Partner ID</label>
    <type>AutoNumber</type>
</CustomField>